# rust-protobuf-demo

./: Cargo.toml  README.md  build.rs
proto/: types.proto
src/: lib.rs  main.rs
