[package]
name = "rust-protobuf-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
prost = { version = "0.11.9", default-features = false, features = ["prost-derive"] }
prost-types = "0.11.9"

[build-dependencies]
prost-build = "0.11.9"
